--- a/Contacto/css/syles.css
+++ b/Contacto/css/syles.css
@@ -84,7 +84,10 @@ body{
 
 /**Conttnt**/
 .content{
+    position: relative;
     margin: 0;
+    top: 80px;
+    bottom: -80px;
     padding: 0;
     height: 100vh;
 
@@ -99,6 +102,7 @@ body{
     padding: 0;
 
     display: flex;
+    flex-wrap: wrap;
 }
 
 .content .contacto li{
@@ -106,7 +110,7 @@ body{
     list-style: none;
     width: 80px;
     height: 80px;
-    margin: 0 80px;
+    margin: 50px 80px;
     transform: rotate(-30deg) skew(25deg);
     background: #ccc;
 }
