--- a/Ubicacion/css/styles.css
+++ b/Ubicacion/css/styles.css
@@ -122,6 +122,17 @@ body{
 
 .img-header .welcome .map{
     margin-top: 20px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    width: 50%;
+    height: 400px;
+}
+
+.img-header .welcome .map iframe{
+    position: relative;
+    width: 100%;
+    height: 100%;
 }
 
 /**Responsive**/
@@ -182,6 +193,13 @@ body{
     .menu .list-container .lists li a:hover{
         background: none;
         color: var(--grey);
+    }
+
+    .map{
+        position: relative;
+        left: 0;
+        width: 150px;
+        height: 150px;
     }
 
 }
